--- a/styles/app.css
+++ b/styles/app.css
@@ -73,8 +73,8 @@ a {
 .header__title-wrapper {
   position: absolute;
   bottom: 16px;
-  -webkit-transform-origin: 0 100%;
-          transform-origin: 0 100%;
+  /* -webkit-transform-origin: 0 100%; */
+  /*         transform-origin: 0 100%; */
 }
 
 .header__title {
@@ -104,19 +104,20 @@ body.details-active .story {
 }
 
 body.raised .header {
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16),
-      0px 2px 5px 0px rgba(0, 0, 0, 0.23);
+  /* box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), */
+  /*     0px 2px 5px 0px rgba(0, 0, 0, 0.23); */
 }
 
 main {
   padding-top: 156px;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  /* -webkit-flex: 1; */
+  /*     -ms-flex: 1; */
+  /*         flex: 1; */
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 0;
+  will-change: transform;
 }
 
 main.loading {
@@ -198,10 +199,10 @@ main.loading {
   text-align: center;
   line-height: 40px;
 
-  box-shadow:
-      0px 2px 5px 0px rgba(0, 0, 0, 0.06),
-      0px 2px 5px 0px rgba(0, 0, 0, 0.08),
-      0px 2px 7px 0px rgba(0, 0, 0, 0.10);
+  /* box-shadow: */
+  /*     0px 2px 5px 0px rgba(0, 0, 0, 0.06), */
+  /*     0px 2px 5px 0px rgba(0, 0, 0, 0.08), */
+  /*     0px 2px 7px 0px rgba(0, 0, 0, 0.10); */
 }
 
 .story-details {
@@ -224,7 +225,6 @@ main.loading {
       -webkit-align-content: stretch;
           align-content: stretch;
 
-  opacity: 0;
   position: fixed;
   top: 0;
   left: 100%;
@@ -232,13 +232,22 @@ main.loading {
   height: 100%;
   background: white;
   z-index: 2;
-  box-shadow:
-      0px 2px 5px 0px rgba(0, 0, 0, 0.06),
-      0px 2px 5px 0px rgba(0, 0, 0, 0.08),
-      0px 2px 7px 0px rgba(0, 0, 0, 0.10);
+  /* box-shadow: */
+  /*     0px 2px 5px 0px rgba(0, 0, 0, 0.06), */
+  /*     0px 2px 5px 0px rgba(0, 0, 0, 0.08), */
+  /*     0px 2px 7px 0px rgba(0, 0, 0, 0.10); */
 
   overflow: hidden;
-  transition: opacity 0.3s ease-out;
+  transition: transform 0.2s;
+  will-change: transform;
+}
+
+.story-details.visible {
+  transform: translateX(-100vw);
+}
+
+.story-details.hidden {
+  transform: translateX(0);
 }
 
 .story-details * {
